# vibepaper

./: CHANGELOG.md  LICENSE  ONBOARDING_PROMPT.md  README.md  paper.toml.example  pyproject.toml
src/vibepaper/: build.py  cli.py  diff.py  gdocs.py  render.py  tables.py  wrap_markdown.py
tests/: conftest.py  test_config.py  test_diff.py  test_facts.py  test_fetch_csl.py  test_filters.py  test_gdocs.py  test_sanity.py  test_tables.py
