[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibepaper"
version = "0.1.0"
description = "Data-bound Markdown-to-Word builder for scientific papers"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "scientific-writing",
    "markdown",
    "pandoc",
    "jinja2",
    "reproducible-research",
    "paper",
    "manuscript",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "jinja2>=3.0",
    "pandas>=1.3",
    "pyyaml>=6.0",
    "lxml>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/PLACEHOLDER/vibepaper"

[project.scripts]
vibepaper = "vibepaper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vibepaper"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
